CMAKE_MINIMUM_REQUIRED(VERSION 2.8.10)
PROJECT(zsr C)

OPTION(BUILD_TESTING "构建测试用例。" ON)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

SET(CMAKE_C_FLAGS_DEBUG  "-O0 -g -ggdb")

SET(CMAKE_INSTALL_PREFIX /usr/local/zsr)
SET(CMAKE_INSTALL_RPATH /usr/local/zsr/bin)

SET(OUTPUT_DIR ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIR})

INCLUDE_DIRECTORIES(include)
ADD_SUBDIRECTORY(libzsr)
ADD_SUBDIRECTORY(zsr)

IF(BUILD_TESTING)
    ENABLE_TESTING()
    ADD_SUBDIRECTORY(test)
ENDIF()
